--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="title_route_from_gpx">Draw route from GPX</string>
     <string name="description_route_from_gpx">In this tutorial we will first parse the route points from a gpx file and then show the route with waypoints on map.</string>
 
-    <string name="title_move_camera_bound">Move Camera to Bounded Area</string>
+    <string name="title_move_camera_bound">Bounded Area</string>
     <string name="description_move_camera_bound">In this tutorial we will move camera to series of attractions using LatLngBounds..</string>
 
     <string name="not_implemented">Not implemented</string>
